Revision history for Perl extension AnyEvent.

3.2  Thu Apr 24 10:10:40 CEST 2008
	- implement PERL_ANYEVENT_MODEL env variable.
        - (experimental) implement interface to the (very crashy/buggy) Event::Lib module.
        - (experimental) implement interface to the Qt module (cannot be autoprobed).
        - support autoloading for child watchers, was broken in all versions.

3.12 Tue Apr 22 07:11:46 CEST 2008
	- reinstate AUTHOR section that got lost somehow.
        - do not hang in the testsuite with badly broken perls (activestate,
          strawberry...), but instead diagnose the problem and continue.
        - use INT instead of CHLD in an attempt to support broken windows perls
          better (this decreases the test quality, unfortunately).
        - do not send the signal to the process group
          (no problem for CHLD, bad for INT :).

3.11 Sat Apr 19 06:57:31 CEST 2008
	- major documentation rework.
        - document the fact that child watchers only watch for zombies.
        - fix the child watcher example.

3.1  Wed Apr 16 17:09:01 CEST 2008
	- work around recurring bugs in Tk by dup'ing filehandles, the
          only method with good success chances on Tk (the bugs apparently
          don't get fixed anytime soon).
        - lift the restriction of only one watcher per fh direction
          (as the Tk bug workaround also lifts it and only Tk imposed
          such strong limits).
        - changed probe order to prefer coro adaptors.
        - explain why recursion into the event loop is not supported
          unless the backend supports it (only Coro::EV does without
          any restrictions...).
        - add simple manpages for all backend modules.

3.0  Mon Apr  7 21:30:23 CEST 2008
	- Coro::Signal changed semantics, roll our own, also cleaning
          up the Coro implementation in general.
        - rename Coro backend to CoroEvent.
        - add some decision helping paragraph to the manpage that should