@@ -1,10 +1,13 @@
 Revision history for Perl extension AnyEvent.
 
 3.2  Thu Apr 24 10:10:40 CEST 2008
+	- do not die when anyevent watchers are destroyed while running callbacks
+          in the pureperl backend (could only happen when two watchers are registered
+          for the same fh/poll combo).
+        - support autoloading for child watchers, was broken in all versions.
 	- implement PERL_ANYEVENT_MODEL env variable.
         - (experimental) implement interface to the (very crashy/buggy) Event::Lib module.
         - (experimental) implement interface to the Qt module (cannot be autoprobed).
-        - support autoloading for child watchers, was broken in all versions.
 
 3.12 Tue Apr 22 07:11:46 CEST 2008
 	- reinstate AUTHOR section that got lost somehow.
